--- a/labcodes/lab1/Makefile
+++ b/labcodes/lab1/Makefile
@@ -211,6 +211,8 @@ qemu-mon: $(UCOREIMG)
 	$(V)$(QEMU)  -no-reboot -monitor stdio -hda $< -serial null
 qemu: $(UCOREIMG)
 	$(V)$(QEMU) -no-reboot -parallel stdio -hda $< -serial null
+qemu-debug: $(UCOREIMG)
+	$(V)$(QEMU) -S -s -no-reboot -parallel stdio -hda $< -serial null
 log: $(UCOREIMG)
 	$(V)$(QEMU) -no-reboot -d int,cpu_reset  -D q.log -parallel stdio -hda $< -serial null
 qemu-nox: $(UCOREIMG)
