Finish lab4 coding

--- a/labcodes/lab4/Makefile
+++ b/labcodes/lab4/Makefile
@@ -242,7 +242,8 @@ qemu-mon: $(UCOREIMG) $(SWAPIMG)
 	$(V)$(QEMU)  -no-reboot -monitor stdio $(QEMUOPTS) -serial null
 qemu: $(UCOREIMG) $(SWAPIMG)
 	$(V)$(QEMU)  -no-reboot -parallel stdio $(QEMUOPTS) -serial null
-
+qemu-debug: $(UCOREIMG) $(SWAPIMG)
+	$(V)$(QEMU) -S -s -no-reboot -parallel stdio $(QEMUOPTS) -serial null
 qemu-nox: $(UCOREIMG) $(SWAPIMG)
 	$(V)$(QEMU)  -no-reboot -serial mon:stdio $(QEMUOPTS) -nographic
 
